--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
 		"@react-aria/visually-hidden": "3.8.12",
 		"clsx": "2.1.1",
 		"framer-motion": "~11.1.1",
+		"install": "^0.13.0",
 		"intl-messageformat": "^10.5.0",
+		"lodash": "^4.17.21",
 		"next": "14.2.4",
 		"next-auth": "^4.24.7",
 		"next-themes": "^0.2.1",
